Clean faute d'orthographe

--- a/HTML/2015-2016.html
+++ b/HTML/2015-2016.html
@@ -8,9 +8,9 @@
 
 <h1> 2015-2016 </h1>
 <h3> Password Secure </h3>
-<p>Password secure est une application mobile que j'ai crée pour le baccalaureat.<br> En effet en spécialité ISN il fallait créer un outil utile pour tout les jours.
-J'ai donc décidé de créer une application qui génère des mots de passes aléatoirement en fonction d'un niveau de difficulté souhaité ainsi que le nombre de caractères. Ces niveaux de difficulté font varié la quantité de caractères spéciaux ainsi que la mise en place ou non de majuscule au coeur du mot de passe.<br>
-Nous pouvons par la suite à l'aide d'un espace sécurisé et personnel acceder à tout les mots de passes enregistré et libellé.</p>
+<p>Password secure est une application mobile que j'ai crée pour le baccalaureat.<br> En effet en spécialité ISN il fallait créer un outil utile pour tous les jours.
+J'ai donc décidé de créer une application qui génère des mots de passes aléatoirement en fonction d'un niveau de difficulté souhaité ainsi que le nombre de caractères. Ces niveaux de difficulté font varier la quantité de caractères spéciaux ainsi que la mise en place ou non de majuscule au coeur du mot de passe.<br>
+Nous pouvons par la suite à l'aide d'un espace sécurisé et personnel acceder à tous les mots de passes enregistrés et libellés.</p>
 <br>
 <img src="../IMG/ChoixLvl.png" alt="Choix de la difficulté du mot de passe"width="24%" height="50%">
 <img src="../IMG/ChoixNb.png" alt="Choix du nombre de caractères dans le mot de passe"width="24%" height="50%">
