--- a/HTML/2017-2018.html
+++ b/HTML/2017-2018.html
@@ -18,8 +18,8 @@
 <br>
 <h3> Knowledge to Escape </h3>
 <p> Knowledge to Escape est un jeu crée lors de la Global Gam Jam 2018 dont le thème etait la transmission. Le joueurs incarne un petit personnage qui doit s'echapper d'un laboratoire.<br>
-Malheursement le temps est son ennemis et il sera forcé de réapparaitre dans son HUB toute les 30 secondes. Pour avancer dans l'histoire il doit récuperer des neurones a travers la carte pour acheter des
-capacité tels que sauter, la possibilité de s'accroupir ou même allonger le temps de liberté en dehors du HUB. Le jeu est composé de deux niveaux ainsi qu'une <a href="https://soundcloud.com/brieux-caquelin/bios">ambiance sonore propre</a>.
+Malheuresement le temps est son ennemi et il sera forcé de réapparaitre dans son HUB toutes les 30 secondes. Pour avancer dans l'histoire il doit récuperer des neurones a travers la carte pour acheter des
+capacités tels que sauter, la possibilité de s'accroupir ou même allonger le temps de liberté en dehors du HUB. Le jeu est composé de deux niveaux ainsi qu'une <a href="https://soundcloud.com/brieux-caquelin/bios">ambiance sonore propre</a>.
 </p>
 <audio controls class="center">
   <source src="../IMG/Bios.ogg" type="audio/ogg" class="center">
@@ -31,14 +31,14 @@ capacité tels que sauter, la possibilité de s'accroupir ou même allonger le t
 <img src="../IMG/CrunchKTE.png" alt="Héros de KTE en mode accroupis"width="32%" height="12%" class="center">
 <br>
 <h3> Undead </h3>
-<p> Undead est le projet de fin de Licence2. Il s'agit ici d'un jeu de reflexion. Le joueurs doit resoudre des casses têtes en placant des fantomes, vampires et zombies sur un plateau.</p>
-<p> Il s'agit d'une recréation du jeu de <a href="http://www.chiark.greenend.org.uk/~sgtatham/puzzles/js/undead.html"> Simon Tatham </a>.<br> Dont le rapport peut être télécharger <a href="../IMG/RapportTM5Z.pdf"> ici </a></p>
+<p> Undead est le projet de fin de Licence2. Il s'agit ici d'un jeu de reflexion. Le joueur doit resoudre des casses têtes en placant des fantomes, vampires et zombies sur un plateau.</p>
+<p> Il s'agit d'une recréation du jeu de <a href="http://www.chiark.greenend.org.uk/~sgtatham/puzzles/js/undead.html"> Simon Tatham </a>,<br> dont le rapport peut être télécharger <a href="../IMG/RapportTM5Z.pdf"> ici </a></p>
 <img src="../IMG/UndeadInterface.png" alt="Interface de Undead version TM5Z" width="20%" height="20%" class="center">
 
 <br>
 <h3> 2048 </h3>
 <p> 2048 est un petit projet que j'ai tutoré avec des Terminales de mon ancien lycée lorsque j'etais en 2ème année de licence. Il s'agit du célèbre jeu mobile en version ordinateur codé entièrement sous Python3<br>
-Mon role dans ce projet etait de créer une version cleen qui servait de correction aux élèves pour les aider a créer de meilleurs jeux. </p>
+Mon role dans ce projet etait de créer une version clean qui servait de correction aux élèves pour les aider a créer de meilleurs jeux. </p>
 <p>Le jeu est disponible sous format ZIP via <a href="../IMG/2048.zip">ce lien</a></p>
 <img src="../IMG/2048Menu.png" alt="Menu principal 2048"width="32%" height="12%" >
 <img src="../IMG/2048Game.png" alt="Interface de jeu 2048"width="32%" height="12%" >
