--- a/HTML/2018-2019.html
+++ b/HTML/2018-2019.html
@@ -8,10 +8,10 @@
 
 <h1> 2018-2019 </h1>
 <h3> Cyber vs Steam </h3>
-<p> Cyber vs Steam est un jeu textuel pour lequel l'objectif etait de faire un jeu en 24h en Java de A à Z pour voir ce que j'etais capable de faire avec un langage que je ne connais pas du tout.<br>
-Le concept est simple puisqu'il s'agit de base du jeu de société Croque Carotte avec quelques changement pour rendre le jeu plus interresant. Le jeu peut se jouer a 4 joueurs maximum. le but du jeu etant d'atteindre le trésor.<br>
+<p> Cyber vs Steam est un jeu textuel pour lequel l'objectif etait de faire un jeu en 24h en Java de A à Z pour voir ce que j'etais capable de faire avec un langage que je ne connaissais pas du tout.<br>
+Le concept est simple puisqu'il s'agit de base du jeu de société Croque Carotte avec quelques changements pour rendre le jeu plus interresant. Le jeu peut se jouer a 4 joueurs maximum. le but du jeu etant d'atteindre le trésor.<br>
 Le thème cyberpunk et steampunk a été choisit a posteriorie dans l'eventuelle idée de faire une version graphique.<br>
-Lors de son tour chaques joueurs à trois choix qui s'offre à lui. Soit créer un nouveau héros parmis 3 types (Soutien, Lourd ou Rapide), utiliser des capacité spéciales propres à chaque classe ou bien utiliser un héros déjà posé sur le plateau pour le faire avancer normalement. </p>
+Lors de son tour chaques joueurs à trois choix qui s'offre à lui. Soit créer un nouveau héros parmis 3 types (Soutien, Lourd ou Rapide), utiliser des capacités spéciales propres à chaque classe ou bien utiliser un héros déjà posé sur le plateau pour le faire avancer normalement. </p>
 <h5> Version textuelle </h5>
 <img src="../IMG/cvs.png" alt="Debut du jeu et choix de création de héros" width="49%" class="center"/>
 <img src="../IMG/cvs2.png" alt="Etat du jeu après quelques tours et choix de l'action" padding="2" width="49%" class="center"/>
@@ -21,22 +21,22 @@ Lors de son tour chaques joueurs à trois choix qui s'offre à lui. Soit créer 
 <br>
 <h3> Gra </h3>
 <p> Gra est le projet de fin d'année de ma troisième année en Informatique. Il s'agit d'un jeu pour Borne d'arcade de scoring crée à l'aide du moteur Unity.
-Il s'agit du jeu le plus complet que j'ai fais puisqu'il est jouable de A à Z et reste installé sur la borne de la FDS de Montpellier.
+Il s'agit du jeu le plus complet que j'ai fais jusqu'a present puisqu'il est jouable de A à Z et reste installé sur la borne de la FDS de Montpellier.
 Toute la partie code à été crée par mon groupe et moi même tandis que toute la partie graphique se compose d'asset libre de droit tel que la <a href="https://soundcloud.com/andrewisaias/warped-fantasy-preview-track"> musique</a>.<br>
-L'inspiration viens des jeux des année 70/80 où les jeux n'avaient pas de but précis autre qu'être le premier sur le tableau des meilleurs scores.
+L'inspiration vient des jeux des années 70/80 où les jeux n'avaient pas de but précis autre qu'être le premier sur le tableau des meilleurs scores.
 Il s'agit ici d'un jeu à deux joueurs favorisant la coopération ainsi que la communication pour réussir a atteindre le meilleur score.<br>
-L'un des gros point fort du jeu est l'ajout d'un système de génération de niveau totalement procédural et aléatoire permettant aux joueurs
+L'un des gros points forts du jeu est l'ajout d'un système de génération de niveau totalement procédural et aléatoire permettant aux joueurs
 de ne jamais rejouer sur le même niveau malgrès une quantité infinie d'heures de jeu.</p>
 <img src="../IMG/MenuGra.png" alt="Splashart rapideSteam" width="49%" class="center"/>
 <img src="../IMG/GraBegin.png" alt="Planche croquis personnages" width="49%" class="center"/>
 <p>Le code permettant la génération aléatoire des niveaux est <a href="../IMG/PlatformGenerator.cs">disponible à la lecture</a></p>
 <br>
 <h3>Boss Generation sous Unity</h3>
-<p> J'ai, dans le cadre de la participation d'un projet TER de master, crée la scène brouillon de leur boss final. Il s'agit d'une salle contenant un boss avec des plate-formes se générant aléatoirement d'un bord et parcourant la salle vers l'autre bord à la manière de certains boss de Cuphead.<br>
+<p> J'ai, dans le cadre de la participation d'un projet TER de master, crée la scène brouillon de leur boss final. Il s'agit d'une salle contenant un boss avec des plate-formes se générant aléatoirement d'un bord de l'ecran et parcourant la salle vers l'autre bord à la manière de certains boss de Cuphead.<br>
 Le boss possède 5 attaques différentes dont le choix est encore une fois aléatoire</p>
 <ul class = 'center'>
 <li>Une attaque provenant du plafond</li>
-<li>Une attaque changeant les plate-formes existante en plate-formes de poison </li>
+<li>Une attaque changeant les plate-formes existante en plate-formes de poisons </li>
 <li>Un tir direct dont la trajectoire droite est aléatoire entre l'origine et sa cible</li>
 <li>Une attaque en style 3D provenant de la caméra</li>
 <li>La création d'une zone triangulaire où le joueur ne doit pas être présent lors de son activation</li>
