--- a/HTML/2020-2021.html
+++ b/HTML/2020-2021.html
@@ -8,7 +8,7 @@
 
 <h1> 2020-2021 </h1>
 <h3>Jeu de societe : Magic Di Rosa</h3>
-<p> Magic Di Rosa est un projet semestriel de creation de jeu de societe au sein de l'ETPA.L'objectif du projet et de recreer un jeu de societe existant en mixant un film et un artiste. En l'occurence j'ai eu Herve Di Rosa, artiste Setois et Porco Rosso un des film de Miyazaki. Les graphismes et les illustration ont ete entierement pense par moi et ont ete poli par un eleve en design graphique.
+<p> Magic Di Rosa est un projet semestriel de creation de jeu de societe au sein de l'ETPA. L'objectif du projet est de recreer un jeu de societe existant en mixant un film et un artiste. En l'occurence j'ai eu Herve Di Rosa, artiste Setois et Porco Rosso un des film de Miyazaki. Les graphismes et les illustrations ont ete entierement pensée par moi et ont ete polies par un eleve en design graphique.
 <br>Le GDD du jeu est disponible <a href="../IMG/GDD_Miyazaki_Porco_Rosso.pdf"> ici </a><br>
 <img src="../IMG/Résultat.png" alt="Présentation du résultat" width="49%" class="center"/>
 <img src="../IMG/Adaptation.png" alt="Adaptation des visuels" width="49%" class="center"/>
@@ -20,14 +20,14 @@
 <source src="../IMG/Ataraxy.mp4" type="video/mp4">
 
 <h3>Lardon's Adventure</h3>
-<p>Lardon's Adventure est mon projet de fin de première année a l'ETPA, il s'agit de la création d'un plateformer format web a l'aide de Phaser 3(librairie JS). Le principe etait de reprendre des méchaniques et de s'inspirer de Mario Bros pour créer son propre jeu de plateforme. Ici le joueur a la possibilité de passer dans une seconde phase de gameplay ou il arrete le temps et ou il peut programmer ses propres compétence à l'aide de point de programmation.
+<p>Lardon's Adventure est mon projet de fin de première année a l'ETPA, il s'agit de la création d'un plateformer format web a l'aide de Phaser 3(librairie JS). Le principe etait de reprendre des méchaniques et de s'inspirer de Mario Bros pour créer son propre jeu de plateforme. Ici le joueur a la possibilité de passer dans une seconde phase de gameplay ou il arrete le temps et ou il peut programmer ses propres compétences à l'aide de points de programmation.
 Le <a href="../IMG/GameConcept_Lardon_s Adventure.pdf">Game Concept</a> ainsi que le <a href="../IMG/GDD Lardon_s Adventure.pdf">GDD</a> sont disponible à la lecture. La version jouable est disponible sur <a href="https://brieux.itch.io/lardons-adventure"> Itch.io </a>
 <img src="../IMG/ArtWork.jpg" alt="ArtWork Lardon" width="49%" class="center"/>
 
 <h3>Rec</h3>
-<p>Voici REC, un prototype de jeu réalisé par nos étudiants de 1ère année à Montpellier, dans le cadre de l'option "Création de jeu vidéo".
-L'objectif était de créer un jeu parfaitement jouable en 1 mois et demi, avec un début et une fin. A noter que la programmation, le level design et le sound design ont été réalisés par nos étudiants, tandis que les assets 3D et l'animation du clone viennent d'une librairie existante.
-Dans ce FPS teinté d'énigmes, le joueur se retrouve dans un laboratoire où il sert de cobaye. Le moindre de ses faits et gestes est enregistré par l'IA durant une période donnée. Puis, celle-ci crée un clone qui va reproduire les actions du joueur, dans le but d'aider ce dernier à résoudre des énigmes. Le temps jeu est approximativement de 25-30 min et correspond à la résolution de 7 énigmes (en plus du tutoriel).</p>
+<p>Voici REC, un prototype de jeu réalisé par mes camarades de 1ère année à Montpellier, dans le cadre de l'option "Création de jeu vidéo".
+L'objectif était de créer un jeu parfaitement jouable en 1 mois et demi, avec un début et une fin. A noter que la programmation, le level design et le sound design ont été réalisés par nous meme, tandis que les assets 3D et l'animation du clone viennent d'une librairie existante.
+Dans ce FPS teinté d'énigmes, le joueur se retrouve dans un laboratoire où il sert de cobaye. Le moindre de ses faits et gestes est enregistré par l'IA durant une période donnée. Puis, celle-ci crée un clone qui va reproduire les actions du joueur, dans le but d'aider ce dernier à résoudre des énigmes. Le temps de jeu est approximativement de 25-30 min et correspond à la résolution de 7 énigmes (en plus du tutoriel).</p>
 <p><a href="https://youtu.be/2Pe9-qL0NBg"> Vidéo du gameplay globale </a></p>
 <img src="../IMG/RecLogo.png" alt="Logo REC" width="25%" class="center"/>
 <img src="../IMG/RecIG.png" alt="InGame REC" width="49%" class="center"/>
@@ -35,9 +35,9 @@ Dans ce FPS teinté d'énigmes, le joueur se retrouve dans un laboratoire où il
 
 <h3>Mutegg</h3>
 
-<p>Mutegg est un jeu crée pendant une Game Jam inter campus de mon école. Le thème était "Communiquer sans parler". L'objectif était de faire un jeu fun dès la première seconde de gameplay. Pour ce faire nous avons décidé de faire un jeu en écran scindé deux joueurs. </p>
-<p>Toute la partie programmation était à ma charge tandis que mes coéquipier ce sont occupé du level design, level art, game design et narration. Le joueur incarne un chef d'entreprise qui doit ramerer ses salarié travailler dans les salles de réunion. Pour ce faire il dispose de trois actions : il peut montrer la direction pour avoir une influence sur les salarié qui ont des yeux. Il peut clapper des main pour appeler les employés qui ont des oreille ou alors péter pour faire fuire ceux qui sentent</p>
-<p><a href="https://stingart.itch.io/mutegg"> Le jeu est téléchargeble ici </a></p>
+<p>Mutegg est un jeu crée pendant une Game Jam inter campus de mon école. Le thème était "Communiquer sans parler". L'objectif était de faire un jeu fun dès la première seconde de gameplay. Pour ce faire nous avons décidé de faire un jeu en écran scindé a deux joueurs. </p>
+<p>Toute la partie programmation était à ma charge tandis que mes coéquipiers se sont occupés du level design, level art, game design et narration. Le joueur incarne un chef d'entreprise qui doit ramerer ses salariés travailler dans les salles de réunion. Pour ce faire il dispose de trois actions : il peut montrer la direction pour avoir une influence sur les salariés qui ont des yeux. Il peut clapper des mains pour appeler les employés qui ont des oreilles ou alors péter pour faire fuire ceux qui sentent</p>
+<p><a href="https://stingart.itch.io/mutegg"> Le jeu est téléchargeable ici </a></p>
 <img src="../IMG/Mutegg.jpg" alt="Icon Mutegg" width="49%" class="center"/>
 <img src="../IMG/IGMutegg.jpg" alt="IN Game Mutegg" width="49%" class="center"/>
 
