--- a/HTML/Autres_créations.html
+++ b/HTML/Autres_créations.html
@@ -20,7 +20,7 @@
 <img src="../IMG/Lampe.jpg" alt="Lampe Cubique" width="33%" class="center"/>
 <br>
 <h3> Photographie </h3>
-<p>Je m'exerce aussi quelques fois à la photographie sans thème particulier autant des paysages que des photo sport ou de présentation.</p>
+<p>Je m'exerce aussi quelques fois à la photographie sans thème particulier autant des paysages que des photos de sport ou de présentation.</p>
 <div class="center">
 <img src="../IMG/Paysage.jpg" alt="Photo contre-jour Saint Jean de Luz"width="16%"  />
 <img src="../IMG/LeMansMoto.jpg" alt="Photo 24Heures du Mans lever de soleil"width="50%"/>
@@ -28,7 +28,7 @@
 </div>
 <br>
 <h3>Sheep Counter</h3>
-<p> Pour passer le temps je code parfois de petit programmes inutile tels que ce compteur de moutons pour pouvoir s'endormir <a href="../IMG/sheepCounter.py">disponible à la lecture</a></p><br>
+<p> Pour passer le temps je code parfois de petits programmes inutiles tels que ce compteur de moutons pour pouvoir s'endormir <a href="../IMG/sheepCounter.py">disponible à la lecture</a></p><br>
 <img src="../IMG/Moutons.png" alt="sheepCounter" width="49%" class="center"/>
 <br>
 </body>
