--- a/HTML/Futurs_projets.html
+++ b/HTML/Futurs_projets.html
@@ -8,17 +8,17 @@
 
 <h1> Futurs projets</h1>
 <h3> Drones </h3>
-<p> Drones est la préface du jeu que j'ai designé pour le concours de l'ENJMIN dont le thème etait lié à une série de documentaire d'<a href="https://www.arte.tv/fr/videos/RC-015330/propaganda">ARTE</a>.
+<p> Drones est la préface du jeu que j'ai designé pour le concours de l'ENJMIN dont le thème etait lié à une série de documentaires d'<a href="https://www.arte.tv/fr/videos/RC-015330/propaganda">ARTE</a>.
 J'ai donc décidé de créer un jeu narratif ou le joueur incarne un drone qui parcourt la Terre dans une ambiance post Apocalyptique pour en apprendre plus sur le declin de la Terre. Lors de ses découvertes
-le joueur apprendra que tout cela est lié à une société qui a fait fortune à l'aide de moyen marketing plus ou moins ethique. Le jeu se jouerai à l'aide d'un joystick type simulateur d'avion et l'HUD du joueur serait
+le joueur apprend que tout cela est lié à une société qui a fait fortune à l'aide de moyens marketing plus ou moins ethique. Le jeu se jouerai à l'aide d'un joystick type simulateur d'avion et l'HUD du joueur serait
 à l'image de l'interface présente dans Metroid Prime mais avec des données typiques des drones (Altitude, vitesse, relevé sonar).</p><br>
 <img src="../IMG/HUDDrone.jpg" alt="Vision du joueurs à travers le drone" width="30%" class="center"/>
 <img src="../IMG/TerrePostApo.jpg" alt="Visuel de la Terre après sa chute" height="0%" class="center"/>
 <br>
 <h3> Don't panic </h3>
-<p> Don't panic est ma prochaine idée de jeu. Il s'agira d'un jeu crée à l'aide du moteur Unity dont le but sera de sauvé une cargaison de metaux de la main de pirates de l'espace. Pour cela il suffira d'eviter des obstacles qui defillent à l'ecran.
-<br> Cependant la difficulté sera présente car le joueur devra utiliser un capteur cardiaque et la vitesse des obstacles augmentera en fonction de la vitesse des battements du coeur du joueur. De plus tout l'univers autour du joueur le poussera à commettre l'erreur de paniquer
-à cause de la musique qui ne cessera d'accelerer ainsi que des changements de couleur de fond.<br></p><p>
+<p> Don't panic est ma prochaine idée de jeu. Il s'agirait d'un jeu crée à l'aide du moteur Unity dont le but serait de sauver une cargaison de metaux de la main de pirates de l'espace. Pour cela il suffirait d'eviter des obstacles qui defilent à l'ecran.
+<br> Cependant la difficulté serait présente car le joueur devra utiliser un capteur cardiaque et la vitesse des obstacles augmenterait en fonction de la vitesse des battements du coeur du joueur. De plus tout l'univers autour du joueur le pousserait à commettre l'erreur de paniquer
+à cause de la musique qui ne cesserait d'accelerer ainsi que des changements de couleur de fond.<br></p><p>
 Le jeu s'inspire du jeu Rayman 3 vis a vis de ses scenes de slider Funkyboard et de l'ambiance psychédelique qui s'en degage </p>
 <img src="../IMG/Rayman3DontPanic.png" alt="Aperçus des niveaux funckyboard de rayman 3" width="49%" class="center"/>
 <br>
