--- a/index.html
+++ b/index.html
@@ -7,9 +7,16 @@
 <body>
 
 <h1>Bienvenue sur mon Portfolio</h1>
-<p>Ici je vais presenter tout les projets sur lesquels j'ai participé ainsi que mes futurs projets.</p>
+<p>Ici je vais presenter tous les projets sur lesquels j'ai participé ainsi que mes futurs projets.</p>
 <div class="center">
-<button class="center"><a href="HTML/2015-2016.html">2015-2016</a></button> <button class="center"><a href="HTML/2016-2017.html">2016-2017</a></button>  <button class="center"><a href="HTML/2017-2018.html">2017-2018</a></button>  <button class="center"><a href="HTML/2018-2019.html">2018-2019</a></button> <button class="center"n><a href="HTML/2020-2021.html">2020-2021</a></button> <button class="center"n><a href="HTML/2021-2022.html">2021-2022</a></button> <button class="center"n><a href="HTML/Futurs_projets.html">Futurs projets</a></button>  <br>
+<button class="center">
+  <a href="HTML/2021-2022.html">2021-2022</a></button> <button class="center">
+  <a href="HTML/2020-2021.html">2020-2021</a></button> <button class="center">
+  <a href="HTML/2018-2019.html">2018-2019</a></button> <button class="center">
+  <a href="HTML/2017-2018.html">2017-2018</a></button>  <button class="center">
+  <a href="HTML/2016-2017.html">2016-2017</a></button>  <button class="center">
+  <a href="HTML/2015-2016.html">2015-2016</a></button> <button class="center">
+  <a href="HTML/Futurs_projets.html">Futurs projets</a></button>  <br>
 </div>
 <p> Ainsi que mes autres créations externes aux jeux vidéos. </p>
 <button class="center"><a href="HTML/Autres_créations.html">Autres cr&eacute;ations</a></button>
